# ImGuiTextSelect

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  readme.md  textselect.cpp  textselect.hpp  xmake.lua
docs/: changelog.md  readme.md
example/: main.cpp
